--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>道路中心線ベクトルタイル表示サンプル</title>
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.css"/>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.js"></script>
+    <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-1.0.0-b1/leaflet.css"/>
+    <script src="//cdn.leafletjs.com/leaflet-1.0.0-b1/leaflet.js"></script>
     <script src="./leaflet-hash.js"></script>
     <script src="./TileLayer.GeoJSON.js"></script>
     <style>
